Squash backport